# knowledge-engineering

./: .env.example  .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_users_table.py  3d539e6d585c_homepage_tables.py
config/: project.yaml
src/knowledge/: vector_store_weaviate.py  weaviate_business_store.py  weaviate_interpretation_store.py  weaviate_pattern_store.py
src/semantic/: embedding.py
src/service/: api.py  auth_cli.py  auth_dependencies.py  auth_models.py  auth_router.py  auth_schemas.py  auth_security.py  db.py  db_models_homepage.py  project_models.py  project_router.py  qa_router.py
src/service/qa_engine/: __init__.py  llm_dashscope.py  prompts.py  retriever.py  sse_emitter.py  stub_retriever.py  synthesizer.py
tests/test_auth/: test_db.py  test_dependencies.py  test_models.py  test_models_homepage.py  test_project_models.py  test_project_router.py  test_qa_engine_e2e.py  test_qa_prompts.py  test_qa_retriever.py  test_qa_router.py  test_qa_session_router.py  test_qa_synthesizer.py  test_router.py  test_schemas.py  test_security.py  test_sse_emitter.py
